fixed: margin and padding in hotel and header

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,23 +11,33 @@
       padding-top: 30px
       padding-bottom: 30px
     &__search
-      margin-left: auto
+      margin-left: 47px
+      margin-right: 73px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15px
+      &__item
+        margin-right: 25px
+        &__item-mr0
+          margin-right: 0px
   .search
     &__input
       width: 340px
+  .hotel
+    margin-top: 0px
 @media (max-width: 768px)
   .container
     max-width: 576px
-    width: 92%
+    width: 90%
   .navbar
     &__search, &-menu, &__user
       display: none
+    &-top
+      padding-top: 28px
+      padding-bottom: 28px
   .menu
     &-button
       display: flex
@@ -55,13 +65,14 @@
       &__text
         width: 100%
       &__name
-        margin-top: 10px
+        // margin-top: 10px
         margin-bottom: 0
       &__rating
         display: none
       &__offer
         order: -1
         margin-left: 0
+        margin-top: 5px
   .hotel-description
     width: 280px
 
