--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,5 +1,5 @@
 .hotel
-    margin-top: 23px
+    // margin-top: 23px
     margin-bottom: 70px
     &-info
         display: flex
@@ -25,6 +25,7 @@
         line-height: 15px
 .stars
     flex-basis: 100%
+    padding-top: 24px
 .offer
     font-size: 10px
     line-height: 13px
@@ -36,12 +37,15 @@
     max-width: 65px
     min-height: 45px
     text-align: center
+    margin-top: 29px
     color: $light
     background-color: $primary
     border-radius: 4px
     &__text
         font-size: 8px
+        font-weight: 600
         line-height: 10px
     &__counter
         font-size: 14px
+        font-weight: bold
         line-height: 18px
