create: add newsletter & responsive

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,7 +11,7 @@
         object-fit: cover
 
 @media (max-width: 992px)
-  .container
+  .container, .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -106,6 +106,12 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 90%
+      flex-direction: column
+      align-items: flex-start
 
 @media (max-width: 576px)
   .logo
@@ -115,3 +121,11 @@
   .hotel
     &__slider
       margin-bottom: 20px
+    &-info
+      margin-bottom: 18px
+  .newsletter
+    padding: 76px 0 83px 0
+    &__title
+      margin-bottom: 37px
+  .subscribe
+    width: 100%
