create: add activities section

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,6 +9,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 
 @media (max-width: 992px)
   .container, .newsletter-wrapper
@@ -50,9 +53,24 @@
   .map
     width: 340px
   .reviews
+    &__title
+      font-style: normal
+      font-weight: bold
+      font-size: 30px
+      line-height: 38px
+      text-align: center
+      text-transform: uppercase
     &-slider
       &__item
         max-width: 580px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 255px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -132,7 +150,12 @@
           right: 50%
           margin-right: -65px
           transform: translate(50%, 0)
-
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+  .card
+    width: 49%
+    height: 255px
 @media (max-width: 576px)
   .logo
     max-width: 99px
@@ -145,7 +168,31 @@
       margin-bottom: 18px
   .newsletter
     padding: 76px 0 83px 0
+    &-title
+      &__strong
+        font-style: normal
+        font-weight: 600
+        font-size: 30px
+        line-height: 38px
+        text-transform: uppercase
     &__title
       margin-bottom: 37px
+      font-size: 20px
+      line-height: 25px
   .subscribe
     width: 100%
+  .reviews
+    &__title
+      font-style: normal
+      font-weight: bold
+      font-size: 18px
+      line-height: 23px
+      text-align: center
+      text-transform: uppercase
+  .card
+    width: 100%
+  .activities
+    &__title
+      font-size: 18px
+      line-height: 23px
+      text-transform: uppercase
