create: add footer block

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -163,7 +163,8 @@
     &__slider
       margin-bottom: 20px
     &-slider
-      height: 250px
+      // изменил в 21-ом уроке с height: 250px
+      height: 179px
     &-info
       margin-bottom: 18px
   .newsletter
