--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -17,7 +17,7 @@
   align-items: flex-start
   padding: 24px 26px
   width: 255px
-  height: 255px
+  min-height: 255px
   border-radius: 6px
   overflow: hidden
   &::before
@@ -47,6 +47,15 @@
     font-weight: bold
     font-size: 16px
     line-height: 20px
+    &__text
+      margin-top: auto
+      margin-bottom: 18px
+      color: $light
+      font-style: normal
+      font-weight: bold
+      font-size: 16px
+      line-height: 20px
+      width: 190px
   &__button
     font-style: normal
     font-weight: 600
