--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -61,3 +61,7 @@
     border: none
     background-color: $primary
     color: $light
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
