--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -39,7 +39,7 @@
         top: 118px
     &__button
       position: absolute
-      top: 50%
+      top: 40%
       transform: translateY(-50%)
       width: 30px
       height: 30px
@@ -50,6 +50,7 @@
       background-color: transparent
       cursor: pointer
       z-index: 99
+      outline: none
       &--prev
         background-image: url(../img/arrow-prev-secondary.svg)
         left: 0px
@@ -74,6 +75,7 @@
       font-size: 12px
       line-height: 15px
       color: $primary
+      margin-top: 0
       margin-bottom: 10px
     &__date
       font-style: normal
