--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -10,7 +10,7 @@
             margin-left: 14px
             margin-top: 4px
         &__name
-            margin-top: 4px
+            margin-top: 0
             margin-bottom: 0
         &__description
             margin: 0
@@ -105,7 +105,8 @@
     color: $light
     border-radius: 8px
     width: 350px
-    min-height: 210px
+    // min-height: 210px
+    height: 211px
     padding: 28px
     &__info
         display: flex
