--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -7,6 +7,7 @@
     line-height: 45px
     text-align: center
     text-transform: uppercase
+    margin-top: 0
     margin-bottom: 70px
   &-slider
     &__item
@@ -53,10 +54,12 @@
       outline: none
       &--prev
         background-image: url(../img/arrow-prev-secondary.svg)
-        left: 0px
+        left: 18px
+        top: 150px
       &--next
         background-image: url(../img/arrow-next-secondary.svg)
-        right: 0px
+        right: 18px
+        top: 150px
     &__profile
       display: flex
       flex-direction: column
@@ -87,7 +90,7 @@
       display: flex
       align-items: center
     &__text
-      max-width: 537px
+      max-width: 536px
       font-style: normal
       font-weight: normal
       font-size: 12px
