--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,10 +12,15 @@
   .card
     width: 230px
     height: 230px
+  .footer
+    &__input
+      flex-basis: 100%
 
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
+  .newsletter
+    padding: 93px 0 93px 0
   .logo
     width: 132px
   .navbar
@@ -26,8 +31,7 @@
       margin-left: 47px
       margin-right: 73px
     &-menu
-      padding-top: 22px
-      padding-bottom: 22px
+      padding: 20px 15px 22px 15px
       &__link
         font-size: 12px
         line-height: 15px
@@ -40,6 +44,7 @@
       width: 340px
   .hotel
     margin-top: 0px
+    margin-bottom: 57px
     &-grid
       flex-direction: column
     &__slider
@@ -50,6 +55,9 @@
       width: 100%
   .booking
     width: 340px
+    padding: 30px 22px 0px 22px
+    &__info
+      margin-bottom: 6px
   .map
     width: 340px
   .reviews
@@ -60,24 +68,100 @@
       line-height: 38px
       text-align: center
       text-transform: uppercase
+      margin-bottom: 50px
     &-slider
       &__item
         max-width: 580px
+      &__button
+        &--prev
+          left: 0px
+          top: 170px
+        &--next
+          right: 0px
+          top: 170px
   .activities
+    &__title
+      margin-top: 12px
     &-wrapper
       flex-wrap: wrap
     &__card
       margin-bottom: 20px
   .card
     width: 340px
-    height: 255px
+    min-height: 255px
+    &__title
+      max-width: 200px
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px
+    &__input
+      flex-basis: 49%
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+      grid-column: span 2
+    &__legal
+      grid-column: span 2
+    &__additional
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        grid-column: span 5
+        grid-row: 4
+  .rating
+    margin-top: 33px
+
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 90%
+  body
+    padding-top: 78px
   .navbar
-    &__search, &-menu, &__user
+    &--mobile
+      &_fixed
+        position: fixed
+        top: 0
+        left: 0
+        right: 0
+        z-index: 99
+    &__search, &__user
+      &--mobile
+        &_hidden
+          display: none
+        &_visible
+          display: flex
+    &__user
+      flex-direction: column
+      justify-content: center
+    &-bottom
       display: none
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 30px
+      &--visible
+        display: block
+    &-menu
+      flex-direction: column
+      &__item
+        margin-bottom: 20px
+        &--mobile
+          &_visible
+            display: block
     &-top
       padding-top: 28px
       padding-bottom: 28px
@@ -97,6 +181,12 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .user
+    &__name
+      &--light
+        color: $light
+        margin-left: 0
+        margin-top: 10px
   .stars
     flex-basis: auto
   .hotel
@@ -156,6 +246,9 @@
   .card
     width: 49%
     height: 255px
+  .footer
+    &__input
+      flex-basis: 100%
 @media (max-width: 576px)
   .logo
     max-width: 99px
@@ -197,3 +290,29 @@
       font-size: 18px
       line-height: 23px
       text-transform: uppercase
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__additional
+      grid-row: 3
+      grid-column: 1
+    &__categories
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+      &-form
+        grid-row: 7
+        grid-column: 1
