--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -1,5 +1,5 @@
 .activities
-  padding: 60px 0 98px 0
+  padding: 0 0 98px 0
   &__title
     font-style: normal
     font-weight: bold
@@ -7,6 +7,7 @@
     line-height: 30px
     text-transform: uppercase
     margin-bottom: 57px
+    margin-top: 23px
   &-wrapper
     display: flex
     justify-content: space-between
@@ -62,7 +63,7 @@
     font-size: 12px
     line-height: 16px
     color: $light
-    padding: 7px 22px
+    padding: 7px 20px
     background-color: $primary
     border: none
     border-radius: 4px
