--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -28,6 +28,7 @@
     font-weight: 300
     font-size: 24px
     line-height: 30px
+    margin: 0
     &__strong
       display: block
       font-weight: 600
@@ -36,7 +37,7 @@
       text-transform: uppercase
 .subscribe
   position: relative
-  width: 355px
+  width: 350px
   height: 55px
   border-radius: 4px
   overflow: hidden
