--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,35 @@ img {
   max-width: 100%;
 }
 
+.input {
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 18px 23px;
+  border: none;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  border-radius: 4px;
+  border: none;
+  background-color: #EC1F46;
+  color: #fff;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -503,7 +532,7 @@ template {
   margin-right: 4px;
 }
 
-.breadcrumb-list__item:not(:last-child)__link {
+.breadcrumb-list__link {
   text-decoration: none;
   color: inherit;
 }
@@ -1148,7 +1177,7 @@ template {
 .footer {
   background-color: #0A223D;
   color: #fff;
-  padding-top: 100px;
+  padding-top: 108px;
   padding-bottom: 46px;
 }
 
@@ -1166,8 +1195,12 @@ template {
           align-items: start;
 }
 
+.footer__legal {
+  margin-left: 70px;
+}
+
 .footer__logo {
-  width: 166px;
+  width: 153px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
@@ -1228,6 +1261,10 @@ template {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
 }
 
 .footer__ul {
@@ -1246,10 +1283,15 @@ template {
 }
 
 .footer__title--inline {
-  margin: 0 43px 0 0;
+  margin: 0 43px 0 5px;
 }
 
 .footer__title--mb-3 {
+  margin-bottom: 30px;
+}
+
+.footer__title--mb-4 {
+  margin-top: 10px;
   margin-bottom: 30px;
 }
 
@@ -1268,7 +1310,7 @@ template {
 }
 
 .footer__item--mb-2 {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .footer__icon {
@@ -1283,6 +1325,9 @@ template {
 .footer__text {
   color: #BDBDBD;
   margin-bottom: 22px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
 }
 
 .footer__link {
@@ -1291,41 +1336,107 @@ template {
 }
 
 .footer__input {
-  background-color: #fff;
-  border-radius: 4px;
-  border: none;
-  padding: 0 23px;
-  height: 50px;
   margin-bottom: 15px;
-  -ms-flex-preferred-size: 48%;
-      flex-basis: 48%;
+  -ms-flex-preferred-size: 47%;
+      flex-basis: 47%;
 }
 
 .footer__message {
-  background-color: #fff;
-  border-radius: 4px;
-  padding: 18px 23px;
-  border: none;
+  height: 123px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin-bottom: 22px;
 }
 
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px;
+.footer__info {
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  border-radius: 4px;
-  border: none;
-  background-color: #EC1F46;
-  color: #fff;
+  color: #BDBDBD;
 }
 
-.footer__info {
+.modal__overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  max-width: 478px;
+  padding: 33px 88px;
+  background-color: #0A223D;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #fff;
+  border-radius: 8px;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.modal__message {
+  width: 100%;
+  min-height: 123px;
+  margin-bottom: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.modal__info {
+  margin-left: 40px;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
@@ -1392,7 +1503,7 @@ template {
   }
   .hotel {
     margin-top: 0px;
-    margin-bottom: 57px;
+    margin-bottom: 60px;
   }
   .hotel-grid {
     -webkit-box-orient: vertical;
@@ -1442,6 +1553,9 @@ template {
     right: 0px;
     top: 170px;
   }
+  .activities {
+    padding-bottom: 50px;
+  }
   .activities__title {
     margin-top: 12px;
   }
@@ -1459,6 +1573,9 @@ template {
   .card__title {
     max-width: 200px;
   }
+  .footer {
+    padding-top: 73px;
+  }
   .footer-wrapper {
     -ms-grid-columns: (1fr)[6];
         grid-template-columns: repeat(6, 1fr);
@@ -1469,6 +1586,7 @@ template {
         flex-basis: 49%;
   }
   .footer__logo {
+    width: 95px;
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1 / 2;
@@ -1567,7 +1685,7 @@ template {
     display: block;
   }
   .navbar-top {
-    padding-top: 28px;
+    padding-top: 24px;
     padding-bottom: 28px;
   }
   .menu-button {
@@ -1590,6 +1708,7 @@ template {
     border: none;
     background-color: #fff;
     cursor: pointer;
+    margin-right: 16px;
   }
   .menu-button__line {
     width: 16px;
@@ -1604,6 +1723,9 @@ template {
   .stars {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
+  }
+  .hotel-slider {
+    max-width: 278px;
   }
   .hotel-name {
     -ms-flex-preferred-size: 100%;
@@ -1638,16 +1760,17 @@ template {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    min-height: 450px;
+    min-height: 405px;
   }
   .hotel-slider {
     height: 350px;
   }
   .booking {
-    width: 100%;
+    max-width: 278px;
   }
   .map {
-    width: 100%;
+    max-width: 278px;
+    max-height: 173px;
   }
   .newsletter-wrapper {
     max-width: 576px;
@@ -1693,11 +1816,17 @@ template {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
+  .breadcrumb-list {
+    padding-top: 11px;
+  }
 }
 
 @media (max-width: 576px) {
   .logo {
     max-width: 99px;
+  }
+  .hotel {
+    margin-bottom: 40px;
   }
   .hotel__slider {
     margin-bottom: 20px;
@@ -1717,6 +1846,7 @@ template {
     font-size: 30px;
     line-height: 38px;
     text-transform: uppercase;
+    padding-top: 5px;
   }
   .newsletter__title {
     margin-bottom: 37px;
@@ -1724,7 +1854,14 @@ template {
     line-height: 25px;
   }
   .subscribe {
-    width: 100%;
+    width: 97%;
+  }
+  .subscribe__input {
+    padding-left: 20px;
+  }
+  .reviews {
+    height: 661px;
+    padding: 40px 0 0 0;
   }
   .reviews__title {
     font-style: normal;
@@ -1733,14 +1870,44 @@ template {
     line-height: 23px;
     text-align: center;
     text-transform: uppercase;
+    width: 245px;
+    margin-bottom: 42px;
+    margin-left: 18px;
+  }
+  .reviews-slider__text {
+    width: 220px;
+    text-align: start;
+  }
+  .reviews-slider__profile {
+    margin-right: 10px;
+  }
+  .reviews-slider__button {
+    top: 32px;
+  }
+  .reviews-slider__button--prev {
+    left: 39%;
+    margin-left: -65px;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+  .reviews-slider__button--next {
+    right: 33%;
+    margin-left: -65px;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
   }
   .card {
     width: 100%;
+  }
+  .activities {
+    padding-bottom: 45px;
   }
   .activities__title {
     font-size: 18px;
     line-height: 23px;
     text-transform: uppercase;
+    margin-bottom: 37px;
+    margin-top: 0;
   }
   .footer-wrapper {
     -ms-grid-columns: 1fr;
