--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,7 +1,7 @@
 .footer
   background-color: $dark
   color: $light
-  padding-top: 100px
+  padding-top: 108px
   padding-bottom: 46px
   &-wrapper
     display: grid
@@ -9,8 +9,10 @@
     grid-gap: 20px
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
+  &__legal
+    margin-left: 70px
   &__logo
-    width: 166px
+    width: 153px
     grid-row: 1 / 3
     align-self: stretch
   &__categories
@@ -36,6 +38,10 @@
     align-items: center
     justify-content: space-between
     flex-wrap: wrap
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__ul
     padding: 0
     margin: 0
@@ -48,8 +54,11 @@
     margin: 0 0 16px 0
     text-transform: uppercase
     &--inline
-      margin: 0 43px 0 0
+      margin: 0 43px 0 5px
     &--mb-3
+      margin-bottom: 30px
+    &--mb-4
+      margin-top: 10px
       margin-bottom: 30px
   &__item
     display: flex
@@ -60,7 +69,7 @@
     line-height: 160%
     color: $footer-text-color
     &--mb-2
-      margin-bottom: 20px
+      margin-bottom: 15px
   &__icon
     width: 18px
     margin-right: 20px
@@ -69,36 +78,40 @@
   &__text
     color: $footer-text-color
     margin-bottom: 22px
+    font-style: normal
+    font-weight: normal
+    font-size: 14px
   &__link
     text-decoration: none
     color: inherit
   &__input
-    background-color: #fff
-    border-radius: 4px
-    border: none
-    padding: 0 23px
-    height: 50px
+    // background-color: #fff
+    // border-radius: 4px
+    // border: none
+    // padding: 0 23px
+    // height: 50px
     margin-bottom: 15px
-    flex-basis: 48%
+    flex-basis: 47%
   &__message
-    background-color: #fff
-    border-radius: 4px
-    padding: 18px 23px
-    border: none
+    height: 123px
+    // background-color: #fff
+    // border-radius: 4px
+    // padding: 18px 23px
+    // border: none
     flex-basis: 100%
     margin-bottom: 22px
-  &__button
-    min-width: 160px
-    min-height: 50px
-    padding: 18px
-    font-style: normal
-    font-weight: bold
-    font-size: 12px
-    line-height: 15px
-    border-radius: 4px
-    border: none
-    background-color: $primary
-    color: $light
+  // &__button
+  //   min-width: 160px
+  //   min-height: 50px
+  //   padding: 18px
+  //   font-style: normal
+  //   font-weight: bold
+  //   font-size: 12px
+  //   line-height: 15px
+  //   border-radius: 4px
+  //   border: none
+  //   background-color: $primary
+  //   color: $light
   &__info
     font-style: normal
     font-weight: bold
